added JDOM and Jmol

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JCLOPS.classpath}
+    ${libs.JCLOPS.classpath}:\
+    ${libs.JDOM.classpath}:\
+    ${libs.Jmol.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,6 +48,12 @@ javadoc.windowtitle=
 # Property libs.JCLOPS.classpath is set here just to make sharing of project simpler.
 # The library definition has always preference over this property.
 libs.JCLOPS.classpath=../../javalibraries/jclops-0.8.jar
+# Property libs.JDOM.classpath is set here just to make sharing of project simpler.
+# The library definition has always preference over this property.
+libs.JDOM.classpath=../../javalibraries/jdom-1.0.jar
+# Property libs.Jmol.classpath is set here just to make sharing of project simpler.
+# The library definition has always preference over this property.
+libs.Jmol.classpath=../../javalibraries/Jmol.jar:../../javalibraries/JmolApplet.jar
 main.class=azul.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
