Added jReality library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.JCLOPS.classpath}:\
     ${libs.JDOM.classpath}:\
-    ${libs.Jmol.classpath}
+    ${libs.Jmol.classpath}:\
+    ${libs.jReality.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,10 +55,16 @@ libs.JDOM.classpath=../../javalibraries/jdom-1.0.jar
 # Property libs.Jmol.classpath is set here just to make sharing of project simpler.
 # The library definition has always preference over this property.
 libs.Jmol.classpath=../../javalibraries/Jmol.jar:../../javalibraries/JmolApplet.jar
-main.class=azul.Test
+# Property libs.jogl.classpath is set here just to make sharing of project simpler.
+# The library definition has always preference over this property.
+libs.jogl.classpath=../../javalibraries/jogl-macosx/jogl.jar:../../javalibraries/jogl-macosx
+# Property libs.jReality.classpath is set here just to make sharing of project simpler.
+# The library definition has always preference over this property.
+libs.jReality.classpath=../../javalibraries/jReality/jReality.jar:../../javalibraries/jReality/lib/antlr.jar:../../javalibraries/jReality/lib/bsh.jar:../../javalibraries/jReality/lib/janino.jar:../../javalibraries/jReality/lib/jtem-beans.jar:../../javalibraries/jReality/lib/jterm.jar:../../javalibraries/jReality/lib/smrj.jar:../../javalibraries/jReality/lib/sunflow.jar:../../javalibraries/jReality/lib/xpp3.jar:../../javalibraries/jReality/lib/xstream.jar
+main.class=be.ugent.caagt.pg.Starter
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
