Added Systre library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,7 +25,8 @@ javac.classpath=\
     ${libs.JCLOPS.classpath}:\
     ${libs.JDOM.classpath}:\
     ${libs.Jmol.classpath}:\
-    ${libs.jReality.classpath}
+    ${libs.jReality.classpath}:\
+    ${libs.Systre.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
